--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.11.5",
     "@types/node": "20.2.5",
