--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.2",
@@ -28,7 +27,5 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
-  "devDependencies": {
-    "next-sitemap": "^4.1.3"
-  }
+  "devDependencies": {}
 }
