--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "client-only": "^0.0.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -27,5 +28,7 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/gtag.js": "^0.0.12"
+  }
 }
