--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.2",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/table": "^1.0.1",
     "@sanity/vision": "^3.11.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -24,6 +26,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-iframe": "^1.8.5",
     "sanity": "^3.11.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
