--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.2",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
@@ -19,6 +21,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "client-only": "^0.0.1",
+    "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -32,6 +35,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/gtag.js": "^0.0.12"
   }
 }
