--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "get-video-id": "^3.6.5",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-iframe": "^1.8.5",
+    "react-refractor": "^2.1.7",
     "sanity": "^3.11.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/gtag.js": "^0.0.12"
+    "@types/gtag.js": "^0.0.12",
+    "@types/refractor": "^3.0.2"
   }
 }
