--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@web3forms/react": "^1.1.3",
     "autoprefixer": "10.4.14",
     "client-only": "^0.0.1",
     "clsx": "^1.2.1",
@@ -30,6 +31,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-iframe": "^1.8.5",
     "react-refractor": "^2.1.7",
     "sanity": "^3.11.5",
