--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.45.2",
     "react-iframe": "^1.8.5",
     "react-refractor": "^2.1.7",
+    "react-router-dom": "^6.14.2",
     "sanity": "^3.11.5",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
