--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-iframe": "^1.8.5",
     "react-refractor": "^2.1.7",
     "sanity": "^3.11.5",
+    "speakingurl": "^14.0.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
